k8s/ingress/grafan-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.vigocare.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
