k8s/ingress/ingress-nginx.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: capi.dev.vigocare.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 31000
#   - host: papi.dev.vigocare.com
#     http:
#       paths:
#       - backend:
#           serviceName: client-api
#           servicePort: 4444
#   - host: dapi.dev.vigocare.com
#     http:
#       paths:
#       - backend:
#           serviceName: doctor-api
#           servicePort: 5555
