k8s/ingress/kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kibana
  namespace: logs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kibana.vigocare.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 443
